@startuml


skinparam classAttributeIconSize 0
hide methods

skinparam padding 2
skinparam ranksep 100
skinparam classFontSize 18
left to right direction
class Administrator


class CenterCoordinator

class Receptionist

class Nurse

class Company {
-designation
}

class Platform{
-description
}


class Employee
{
  -id
  -name;
  -address;
  -phoneNumber;
  -emailAddress;
  -citizenCardNumber;
  -{static}count_num_employees
}

class User{
-id
-password
-name
}

class UserRole{
-id
-description
}


Employee <|-- CenterCoordinator
Employee <|-- Administrator
Employee <|-- Nurse
Employee <|-- Receptionist
Employee "*" -- "1" Platform : registers in >
Employee "0..1" -- "1" User : relates to >

Company "1" -- "*" User :comprehends >

Company "1" -- "1" Platform : has >
User "1" -- "1..*" UserRole : plays >
Company "1" -- "*" Administrator : has >
@enduml